添加quick板子，支持双lcd，基于果云面板

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -136,6 +136,8 @@ elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
 elseif(CONFIG_BOARD_TYPE_DOIT_S3_AIBOX)
     set(BOARD_TYPE "doit-s3-aibox")
+elseif(CONFIG_BOARD_TYPE_QUICK_S3_AIBOX)
+    set(BOARD_TYPE "quick-s3-aibox")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
 endif()
